# laba-2

./: CMakeLists.txt  Department.cpp  Department.h  Employee.cpp  Employee.h  FulltimeEmployee.cpp  FulltimeEmployee.h  ICalculatable.cpp  ICalculatable.h  ParttimeEmployee.cpp  ParttimeEmployee.h  PayrollManager.cpp  PayrollManager.h  Person.cpp  Person.h  main.cpp
