cmake_minimum_required(VERSION 3.30)
project(laba_2)

set(CMAKE_CXX_STANDARD 20)

add_executable(laba_2 main.cpp
        Employee.cpp
        Employee.h
        FulltimeEmployee.cpp
        FulltimeEmployee.h
        ParttimeEmployee.cpp
        ParttimeEmployee.h
        PayrollManager.cpp
        PayrollManager.h
        PayrollManager.cpp
        PayrollManager.h
        Person.cpp
        Person.h
        Department.cpp
        Department.h
        FulltimeEmployee.cpp
        FulltimeEmployee.h
)
